# DataGenerator

./: .coveragerc  .editorconfig  .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  documentation.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml
datagenerator/: __init__.py  categorical.py  classification.py  dag.py  generator.py  noise.py  patterns.py  transforms.py
datagenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: test_readme_content.ipynb
scripts/: new_branch.sh  pre_commit.sh  pre_push.sh  publish.sh
tests/: __init__.py  test_placeholder.py
