[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datagenerator"
version = "0.1.0"
description = "Synthetic data generation using DAG-based structural causal models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["causal inference", "DAG", "synthetic data", "data generation", "structural causal models"]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
full = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/datagenerator"
Repository = "https://github.com/yourusername/datagenerator"

[tool.setuptools.packages.find]
include = ["datagenerator*"]
