[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datagenerator"
version = "0.1.0"
description = "Synthetic data generation using DAG-based structural causal models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["causal inference", "DAG", "synthetic data", "data generation", "structural causal models"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
full = [
    "matplotlib>=3.5.0",
    "scipy>=1.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/MilaimKas/DataGenerator"
Repository = "https://github.com/MilaimKas/DataGenerator"

[tool.setuptools.packages.find]
include = ["datagenerator*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "SIM",
  "TID",
  "RUF",
]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=datagenerator --cov-report=term-missing"
testpaths = ["tests", "datagenerator"]

[tool.ty]
# ty type checker — https://github.com/astral-sh/ty
